# highlighter

./: .gitignore
api-server/: build.gradle  settings.gradle
api-server/src/main/java/org/ybigta/highlighter/: HighlighterApplication.java
api-server/src/main/java/org/ybigta/highlighter/stream/controller/: StreamController.java
api-server/src/main/java/org/ybigta/highlighter/stream/dto/request/: StartStreamRequest.java
api-server/src/main/java/org/ybigta/highlighter/stream/dto/response/: ListStreamsResponse.java
api-server/src/main/java/org/ybigta/highlighter/stream/service/: StreamService.java
api-server/src/main/java/org/ybigta/highlighter/topic/: TopicConfig.java
api-server/src/main/resources/: application.yaml
api-server/src/test/java/org/ybigta/highlighter/: HighlighterApplicationTests.java
dockerfiles/: Dockerfile.api-server
kubernetes/: api-server.yaml  kafka-broker.yaml
legacy/video-stream/: README.md
scripts/builds/: api-server.sh
scripts/run/: api-server.sh  broker.sh
youtube-live/: .env.example  README.md  app.py  pyproject.toml
